2013-05-15  Earnie Boyd  <earnie@users.sourceforge.net>

	* .gitignore: Add nbproject folder.
	* NEWS: Add note about the globbing change.

2013-05-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid a potential SIGSEGV crash on CRT start-up.

	* src/libcrt/misc/glob.c (glob_signed): Check only for pointer
	aliasing, when validating a glob_t signature; checking signature
	content via an uninitialised pointer may segfault.

	* src/libcrt/crt/init.c (__mingw_setargv): Call __mingw_glob()
	directly, then set GLOB_APPEND for later calls; do not delegate to...
	(do_glob): ...this; it uselessly attempted to set GLOB_APPEND on the
	basis of an uninitialised counter.  Function now unused; delete it.

2013-05-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Install non-executable files with proper attributes.

	* Makefile.in (INSTALL_DATA): New macro; define it per AC_SUBST;
	substitute it at point of use, as appropriate, in place of...
	(INSTALL): ...this.

2013-05-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update build-aux submodule reference for SF host migration.

	* .gitmodules (url): Relocate to git://git.code.sourceforge.net/p/

2013-04-10  Earnie Boyd  <earnie@users.sourceforge.net>

	* Makefile.in: Add installation and delivery of library object files.

2013-04-09  Earnie Boyd  <earnie@users.sourceforge.net>

	* Makefile.in: Adjust distributed package names when RELEASE_STATUS is
	not equal "dist".

2013-03-13  Earnie Boyd  <earnie@users.sourceforge.net>

	* LICENSE: Update copyright notice adding year 2013.
	* README: Update copyright notice adding year 2013.
	Add text to explain where release notes can be found.
	* Makefile.in: Update copyright notice adding year 2013.
	(mingwrtdocdir): New variable used in dist-mingwrt target.
	(w32apidocdir): New variable used in dist-w32api target.
	(doc_DOCUMENTS): Add ChangeLog, NEWS, TODO, and NOTES.
	(install-mingwrt-dirs, install-w32api-dirs): Correct creation of doc